Add lots of references (and some other changes)

--- a/doc/paper.bib
+++ b/doc/paper.bib
@@ -29,7 +29,7 @@
 }
 @inproceedings{DBLP:conf/uai/BremenK21,
   author       = {Timothy {van Bremen} and
-                  Ondrej Kuzelka},
+                  Ondrej Ku\v{z}elka},
   title        = {Faster lifting for two-variable logic using cell graphs},
   booktitle    = {{UAI}},
   series       = {Proceedings of Machine Learning Research},
@@ -39,7 +39,7 @@
   year         = {2021}
 }
 @article{DBLP:journals/jair/Kuzelka21,
-  author       = {Ondrej Kuzelka},
+  author       = {Ondrej Ku\v{z}elka},
   title        = {Weighted First-Order Model Counting in the Two-Variable Fragment With
                   Counting Quantifiers},
   journal      = {J. Artif. Intell. Res.},
@@ -48,7 +48,7 @@
   year         = {2021}
 }
 @inproceedings{DBLP:conf/ijcai/Kuzelka23,
-  author       = {Ondrej Kuzelka},
+  author       = {Ondrej Ku\v{z}elka},
   title        = {Counting and Sampling Models in First-Order Logic},
   booktitle    = {{IJCAI}},
   pages        = {7020--7025},
@@ -59,7 +59,7 @@
   author       = {Yuanhong Wang and
                   Timothy {van Bremen} and
                   Yuyi Wang and
-                  Ondrej Kuzelka},
+                  Ondrej Ku\v{z}elka},
   title        = {Domain-Lifted Sampling for Universal Two-Variable Logic and Extensions},
   booktitle    = {{AAAI}},
   pages        = {10070--10079},
@@ -70,7 +70,7 @@
   author       = {Yuanhong Wang and
                   Juhua Pu and
                   Yuyi Wang and
-                  Ondrej Kuzelka},
+                  Ondrej Ku\v{z}elka},
   title        = {On Exact Sampling in the Two-Variable Fragment of First-Order Logic},
   booktitle    = {{LICS}},
   pages        = {1--13},
@@ -78,7 +78,7 @@
 }
 @inproceedings{DBLP:conf/ijcai/BremenK20,
   author       = {Timothy {van Bremen} and
-                  Ondrej Kuzelka},
+                  Ondrej Ku\v{z}elka},
   title        = {Approximate Weighted First-Order Model Counting: Exploiting Fast Approximate
                   Model Counters and Symmetry},
   booktitle    = {{IJCAI}},
@@ -88,7 +88,7 @@
 }
 @article{DBLP:journals/ai/BremenK23,
   author       = {Timothy {van Bremen} and
-                  Ondrej Kuzelka},
+                  Ondrej Ku\v{z}elka},
   title        = {Lifted inference with tree axioms},
   journal      = {Artif. Intell.},
   volume       = {324},
@@ -97,7 +97,7 @@
 }
 @inproceedings{DBLP:conf/aaai/TothK23,
   author       = {Jan T{\'{o}}th and
-                  Ondrej Kuzelka},
+                  Ondrej Ku\v{z}elka},
   title        = {Lifted Inference with Linear Order Axiom},
   booktitle    = {{AAAI}},
   pages        = {12295--12304},
@@ -109,7 +109,7 @@
                   Peter Jung and
                   Jan T{\'{o}}th and
                   Yuyi Wang and
-                  Ondrej Kuzelka},
+                  Ondrej Ku\v{z}elka},
   title        = {On Discovering Interesting Combinatorial Integer Sequences},
   booktitle    = {{IJCAI}},
   pages        = {3338--3346},
@@ -121,8 +121,8 @@
                   Timothy {van Bremen} and
                   Yuyi Wang and
                   Filip Zelezn{\'{y}} and
-                  Ondrej Kuzelka},
-  title        = {Automatic Conjecturing of P-Recursions Using Lifted Inference},
+                  Ondrej Ku\v{z}elka},
+  title        = {Automatic Conjecturing of {P}-Recursions Using Lifted Inference},
   booktitle    = {{ILP}},
   series       = {Lecture Notes in Computer Science},
   volume       = {13191},
@@ -148,4 +148,141 @@
   journal      = {CoRR},
   volume       = {abs/2306.04189},
   year         = {2023}
+}
+@article{DBLP:journals/cacm/GogateD16,
+  author       = {Vibhav Gogate and
+                  Pedro M. Domingos},
+  title        = {Probabilistic theorem proving},
+  journal      = {Commun. {ACM}},
+  volume       = {59},
+  number       = {7},
+  pages        = {107--115},
+  year         = {2016}
+}
+@inproceedings{DBLP:conf/aaai/VenugopalSG15,
+  author       = {Deepak Venugopal and
+                  Somdeb Sarkhel and
+                  Vibhav Gogate},
+  title        = {Just Count the Satisfied Groundings: Scalable Local-Search and Sampling
+                  Based Inference in MLNs},
+  booktitle    = {{AAAI}},
+  pages        = {3606--3612},
+  publisher    = {{AAAI} Press},
+  year         = {2015}
+}
+@article{DBLP:journals/pvldb/NiuRDS11,
+  author       = {Feng Niu and
+                  Christopher R{\'{e}} and
+                  AnHai Doan and
+                  Jude W. Shavlik},
+  title        = {Tuffy: Scaling up Statistical Inference in {Markov} Logic Networks using
+                  an {RDBMS}},
+  journal      = {Proc. {VLDB} Endow.},
+  volume       = {4},
+  number       = {6},
+  pages        = {373--384},
+  year         = {2011}
+}
+@article{DBLP:journals/ml/RichardsonD06,
+  author       = {Matthew Richardson and
+                  Pedro M. Domingos},
+  title        = {Markov logic networks},
+  journal      = {Mach. Learn.},
+  volume       = {62},
+  number       = {1-2},
+  pages        = {107--136},
+  year         = {2006}
+}
+@inproceedings{DBLP:conf/kr/KazemiP16,
+  author       = {Seyed Mehran Kazemi and
+                  David Poole},
+  title        = {Knowledge Compilation for Lifted Probabilistic Inference: Compiling
+                  to a Low-Level Language},
+  booktitle    = {{KR}},
+  pages        = {561--564},
+  publisher    = {{AAAI} Press},
+  year         = {2016}
+}
+@article{DBLP:journals/jair/TotisDRK23,
+  author       = {Pietro Totis and
+                  Jesse Davis and
+                  Luc {De Raedt} and
+                  Angelika Kimmig},
+  title        = {Lifted Reasoning for Combinatorial Counting},
+  journal      = {J. Artif. Intell. Res.},
+  volume       = {76},
+  pages        = {1--58},
+  year         = {2023}
+}
+@article{DBLP:journals/ijar/AzzoliniR23,
+  author       = {Damiano Azzolini and
+                  Fabrizio Riguzzi},
+  title        = {Lifted inference for statistical statements in probabilistic answer
+                  set programming},
+  journal      = {Int. J. Approx. Reason.},
+  volume       = {163},
+  pages        = {109040},
+  year         = {2023}
+}
+@article{DBLP:journals/ijar/RiguzziBZCL17,
+  author       = {Fabrizio Riguzzi and
+                  Elena Bellodi and
+                  Riccardo Zese and
+                  Giuseppe Cota and
+                  Evelina Lamma},
+  title        = {A survey of lifted inference approaches for probabilistic logic programming
+                  under the distribution semantics},
+  journal      = {Int. J. Approx. Reason.},
+  volume       = {80},
+  pages        = {313--333},
+  year         = {2017}
+}
+@inproceedings{DBLP:conf/ecai/Kersting12,
+  author       = {Kristian Kersting},
+  title        = {Lifted Probabilistic Inference},
+  booktitle    = {{ECAI}},
+  series       = {Frontiers in Artificial Intelligence and Applications},
+  volume       = {242},
+  pages        = {33--38},
+  publisher    = {{IOS} Press},
+  year         = {2012}
+}
+@inproceedings{DBLP:conf/starai/JaegerB12,
+  author       = {Manfred Jaeger and
+                  Guy {Van den Broeck}},
+  title        = {Liftability of Probabilistic Inference: Upper and Lower Bounds},
+  booktitle    = {StarAI@UAI},
+  year         = {2012}
+}
+@inproceedings{DBLP:conf/nips/KazemiKBP16,
+  author       = {Seyed Mehran Kazemi and
+                  Angelika Kimmig and
+                  Guy {Van den Broeck} and
+                  David Poole},
+  title        = {New Liftable Classes for First-Order Probabilistic Inference},
+  booktitle    = {{NIPS}},
+  pages        = {3117--3125},
+  year         = {2016}
+}
+@article{DBLP:journals/debu/GribkoffSB14,
+  author       = {Eric Gribkoff and
+                  Dan Suciu and
+                  Guy {Van den Broeck}},
+  title        = {Lifted Probabilistic Inference: {A} Guide for the Database Researcher},
+  journal      = {{IEEE} Data Eng. Bull.},
+  volume       = {37},
+  number       = {3},
+  pages        = {6--17},
+  year         = {2014}
+}
+@inproceedings{DBLP:conf/pods/BeameBGS15,
+  author       = {Paul Beame and
+                  Guy {Van den Broeck} and
+                  Eric Gribkoff and
+                  Dan Suciu},
+  title        = {Symmetric Weighted First-Order Model Counting},
+  booktitle    = {{PODS}},
+  pages        = {313--328},
+  publisher    = {{ACM}},
+  year         = {2015}
 }
