--- a/doc/plot.tex
+++ b/doc/plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.6 on 2024-04-04 08:49:14
+% Created by tikzDevice version 0.12.6 on 2024-04-12 11:27:55
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -11,273 +11,273 @@
 \path[draw=drawColor,line width= 0.5pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (240.29,135.16);
 \end{scope}
 \begin{scope}
-\path[clip] ( 29.55, 25.11) rectangle (145.94,130.66);
+\path[clip] ( 29.55, 25.11) rectangle (141.96,130.66);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 29.55, 25.11) rectangle (145.94,130.66);
+\path[fill=fillColor] ( 29.55, 25.11) rectangle (141.96,130.66);
 \definecolor{drawColor}{gray}{0.87}
 
 \path[draw=drawColor,line width= 0.1pt,line join=round] ( 29.55, 36.74) --
-	(145.94, 36.74);
+	(141.96, 36.74);
 
 \path[draw=drawColor,line width= 0.1pt,line join=round] ( 29.55, 71.11) --
-	(145.94, 71.11);
+	(141.96, 71.11);
 
 \path[draw=drawColor,line width= 0.1pt,line join=round] ( 29.55,105.49) --
-	(145.94,105.49);
+	(141.96,105.49);
 
-\path[draw=drawColor,line width= 0.1pt,line join=round] ( 47.29, 25.11) --
-	( 47.29,130.66);
+\path[draw=drawColor,line width= 0.1pt,line join=round] ( 46.68, 25.11) --
+	( 46.68,130.66);
 
-\path[draw=drawColor,line width= 0.1pt,line join=round] ( 78.41, 25.11) --
-	( 78.41,130.66);
+\path[draw=drawColor,line width= 0.1pt,line join=round] ( 76.74, 25.11) --
+	( 76.74,130.66);
 
-\path[draw=drawColor,line width= 0.1pt,line join=round] (109.53, 25.11) --
-	(109.53,130.66);
+\path[draw=drawColor,line width= 0.1pt,line join=round] (106.80, 25.11) --
+	(106.80,130.66);
 
-\path[draw=drawColor,line width= 0.1pt,line join=round] (140.65, 25.11) --
-	(140.65,130.66);
+\path[draw=drawColor,line width= 0.1pt,line join=round] (136.85, 25.11) --
+	(136.85,130.66);
 
 \path[draw=drawColor,line width= 0.2pt,line join=round] ( 29.55, 53.93) --
-	(145.94, 53.93);
+	(141.96, 53.93);
 
 \path[draw=drawColor,line width= 0.2pt,line join=round] ( 29.55, 88.30) --
-	(145.94, 88.30);
+	(141.96, 88.30);
 
 \path[draw=drawColor,line width= 0.2pt,line join=round] ( 29.55,122.67) --
-	(145.94,122.67);
+	(141.96,122.67);
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] ( 31.72, 25.11) --
-	( 31.72,130.66);
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 31.65, 25.11) --
+	( 31.65,130.66);
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] ( 62.85, 25.11) --
-	( 62.85,130.66);
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 61.71, 25.11) --
+	( 61.71,130.66);
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] ( 93.97, 25.11) --
-	( 93.97,130.66);
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 91.77, 25.11) --
+	( 91.77,130.66);
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] (125.09, 25.11) --
-	(125.09,130.66);
+\path[draw=drawColor,line width= 0.2pt,line join=round] (121.82, 25.11) --
+	(121.82,130.66);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 52.07) --
-	( 37.95, 52.04) --
-	( 41.06, 52.04) --
-	( 44.17, 52.04) --
-	( 47.29, 52.04) --
-	( 50.40, 52.05) --
-	( 53.51, 52.04) --
-	( 56.62, 52.05) --
-	( 59.73, 52.04) --
-	( 62.85, 52.04) --
-	( 65.96, 52.04) --
-	( 69.07, 52.04) --
-	( 72.18, 52.04) --
-	( 75.30, 52.04) --
-	( 78.41, 52.05) --
-	( 81.52, 52.05) --
-	( 84.63, 52.04) --
-	( 87.74, 52.04) --
-	( 90.86, 52.09) --
-	( 93.97, 52.05) --
-	( 97.08, 52.05) --
-	(100.19, 52.05) --
-	(103.31, 52.05) --
-	(106.42, 52.04) --
-	(109.53, 52.04) --
-	(112.64, 52.04) --
-	(115.75, 52.04) --
-	(118.87, 52.04) --
-	(121.98, 52.04) --
-	(125.09, 52.05) --
-	(128.20, 52.05) --
-	(131.32, 52.05) --
-	(134.43, 52.04) --
-	(137.54, 52.05) --
-	(140.65, 52.04);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 52.07) --
+	( 37.66, 52.04) --
+	( 40.67, 52.04) --
+	( 43.67, 52.04) --
+	( 46.68, 52.04) --
+	( 49.68, 52.05) --
+	( 52.69, 52.04) --
+	( 55.70, 52.05) --
+	( 58.70, 52.04) --
+	( 61.71, 52.04) --
+	( 64.71, 52.04) --
+	( 67.72, 52.04) --
+	( 70.73, 52.04) --
+	( 73.73, 52.04) --
+	( 76.74, 52.05) --
+	( 79.74, 52.05) --
+	( 82.75, 52.04) --
+	( 85.75, 52.04) --
+	( 88.76, 52.09) --
+	( 91.77, 52.05) --
+	( 94.77, 52.05) --
+	( 97.78, 52.05) --
+	(100.78, 52.05) --
+	(103.79, 52.04) --
+	(106.80, 52.04) --
+	(109.80, 52.04) --
+	(112.81, 52.04) --
+	(115.81, 52.04) --
+	(118.82, 52.04) --
+	(121.82, 52.05) --
+	(124.83, 52.05) --
+	(127.84, 52.05) --
+	(130.84, 52.04) --
+	(133.85, 52.05) --
+	(136.85, 52.04);
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.84, 54.53) --
-	( 37.95, 54.50) --
-	( 41.06, 54.50) --
-	( 44.17, 54.49) --
-	( 47.29, 54.49) --
-	( 50.40, 54.49) --
-	( 53.51, 54.49) --
-	( 56.62, 54.50) --
-	( 59.73, 54.50) --
-	( 62.85, 54.49) --
-	( 65.96, 54.49) --
-	( 69.07, 54.49) --
-	( 72.18, 54.49) --
-	( 75.30, 54.49) --
-	( 78.41, 54.50) --
-	( 81.52, 54.50) --
-	( 84.63, 54.50) --
-	( 87.74, 54.50) --
-	( 90.86, 54.49) --
-	( 93.97, 54.50) --
-	( 97.08, 54.50) --
-	(100.19, 54.49) --
-	(103.31, 54.50) --
-	(106.42, 54.50) --
-	(109.53, 54.50) --
-	(112.64, 54.50) --
-	(115.75, 54.49) --
-	(118.87, 54.50) --
-	(121.98, 54.50) --
-	(125.09, 54.50) --
-	(128.20, 54.50) --
-	(131.32, 54.50) --
-	(134.43, 54.50) --
-	(137.54, 54.50) --
-	(140.65, 54.50);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.66, 54.53) --
+	( 37.66, 54.50) --
+	( 40.67, 54.50) --
+	( 43.67, 54.49) --
+	( 46.68, 54.49) --
+	( 49.68, 54.49) --
+	( 52.69, 54.49) --
+	( 55.70, 54.50) --
+	( 58.70, 54.50) --
+	( 61.71, 54.49) --
+	( 64.71, 54.49) --
+	( 67.72, 54.49) --
+	( 70.73, 54.49) --
+	( 73.73, 54.49) --
+	( 76.74, 54.50) --
+	( 79.74, 54.50) --
+	( 82.75, 54.50) --
+	( 85.75, 54.50) --
+	( 88.76, 54.49) --
+	( 91.77, 54.50) --
+	( 94.77, 54.50) --
+	( 97.78, 54.49) --
+	(100.78, 54.50) --
+	(103.79, 54.50) --
+	(106.80, 54.50) --
+	(109.80, 54.50) --
+	(112.81, 54.49) --
+	(115.81, 54.50) --
+	(118.82, 54.50) --
+	(121.82, 54.50) --
+	(124.83, 54.50) --
+	(127.84, 54.50) --
+	(130.84, 54.50) --
+	(133.85, 54.50) --
+	(136.85, 54.50);
 \definecolor{drawColor}{RGB}{217,95,2}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 49.39) --
-	( 37.95, 49.33) --
-	( 41.06, 49.33) --
-	( 44.17, 49.33) --
-	( 47.29, 49.33) --
-	( 50.40, 49.33) --
-	( 53.51, 49.33) --
-	( 56.62, 49.35) --
-	( 59.73, 49.35) --
-	( 62.85, 49.33) --
-	( 65.96, 49.33) --
-	( 69.07, 49.33) --
-	( 72.18, 49.33) --
-	( 75.30, 49.33) --
-	( 78.41, 49.33) --
-	( 81.52, 49.35) --
-	( 84.63, 49.35) --
-	( 87.74, 49.35) --
-	( 90.86, 49.33) --
-	( 93.97, 49.33) --
-	( 97.08, 49.33) --
-	(100.19, 49.33) --
-	(103.31, 49.33) --
-	(106.42, 49.33) --
-	(109.53, 49.35) --
-	(112.64, 49.35) --
-	(115.75, 49.33) --
-	(118.87, 49.33) --
-	(121.98, 49.33) --
-	(125.09, 49.33) --
-	(128.20, 49.33) --
-	(131.32, 49.33) --
-	(134.43, 49.35) --
-	(137.54, 49.35) --
-	(140.65, 49.33);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 49.39) --
+	( 37.66, 49.33) --
+	( 40.67, 49.33) --
+	( 43.67, 49.33) --
+	( 46.68, 49.33) --
+	( 49.68, 49.33) --
+	( 52.69, 49.33) --
+	( 55.70, 49.35) --
+	( 58.70, 49.35) --
+	( 61.71, 49.33) --
+	( 64.71, 49.33) --
+	( 67.72, 49.33) --
+	( 70.73, 49.33) --
+	( 73.73, 49.33) --
+	( 76.74, 49.33) --
+	( 79.74, 49.35) --
+	( 82.75, 49.35) --
+	( 85.75, 49.35) --
+	( 88.76, 49.33) --
+	( 91.77, 49.33) --
+	( 94.77, 49.33) --
+	( 97.78, 49.33) --
+	(100.78, 49.33) --
+	(103.79, 49.33) --
+	(106.80, 49.35) --
+	(109.80, 49.35) --
+	(112.81, 49.33) --
+	(115.81, 49.33) --
+	(118.82, 49.33) --
+	(121.82, 49.33) --
+	(124.83, 49.33) --
+	(127.84, 49.33) --
+	(130.84, 49.35) --
+	(133.85, 49.35) --
+	(136.85, 49.33);
 \definecolor{drawColor}{RGB}{117,112,179}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 29.90) --
-	( 37.95, 30.63) --
-	( 41.06, 30.63) --
-	( 44.17, 29.90) --
-	( 47.29, 30.63) --
-	( 50.40, 31.33) --
-	( 53.51, 32.63) --
-	( 56.62, 33.82) --
-	( 59.73, 35.45) --
-	( 62.85, 38.26) --
-	( 65.96, 40.62) --
-	( 69.07, 42.34) --
-	( 72.18, 46.05) --
-	( 75.30, 49.23) --
-	( 78.41, 52.36) --
-	( 81.52, 64.35) --
-	( 84.63, 58.30) --
-	( 87.74, 68.19) --
-	( 90.86, 70.67) --
-	( 93.97, 72.59) --
-	( 97.08, 78.45) --
-	(100.19, 78.57) --
-	(103.31, 83.81) --
-	(106.42, 86.56) --
-	(109.53, 85.94) --
-	(112.64, 92.57) --
-	(115.75, 95.46) --
-	(118.87, 98.41) --
-	(121.98,102.64) --
-	(125.09,102.38) --
-	(128.20,106.28) --
-	(131.32,110.72) --
-	(134.43,112.06) --
-	(137.54,116.16) --
-	(140.65,119.03);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 29.90) --
+	( 37.66, 30.63) --
+	( 40.67, 30.63) --
+	( 43.67, 29.90) --
+	( 46.68, 30.63) --
+	( 49.68, 31.33) --
+	( 52.69, 32.63) --
+	( 55.70, 33.82) --
+	( 58.70, 35.45) --
+	( 61.71, 38.26) --
+	( 64.71, 40.62) --
+	( 67.72, 42.34) --
+	( 70.73, 46.05) --
+	( 73.73, 49.23) --
+	( 76.74, 52.36) --
+	( 79.74, 64.35) --
+	( 82.75, 58.30) --
+	( 85.75, 68.19) --
+	( 88.76, 70.67) --
+	( 91.77, 72.59) --
+	( 94.77, 78.45) --
+	( 97.78, 78.57) --
+	(100.78, 83.81) --
+	(103.79, 86.56) --
+	(106.80, 85.94) --
+	(109.80, 92.57) --
+	(112.81, 95.46) --
+	(115.81, 98.41) --
+	(118.82,102.64) --
+	(121.82,102.38) --
+	(124.83,106.28) --
+	(127.84,110.72) --
+	(130.84,112.06) --
+	(133.85,116.16) --
+	(136.85,119.03);
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.84, 30.63) --
-	( 37.95, 30.63) --
-	( 41.06, 31.33) --
-	( 44.17, 31.33) --
-	( 47.29, 32.63) --
-	( 50.40, 33.82) --
-	( 53.51, 35.96) --
-	( 56.62, 37.83) --
-	( 59.73, 40.62) --
-	( 62.85, 43.28) --
-	( 65.96, 46.30) --
-	( 69.07, 50.22) --
-	( 72.18, 53.16) --
-	( 75.30, 57.14) --
-	( 78.41, 60.47) --
-	( 81.52, 64.05) --
-	( 84.63, 72.20) --
-	( 87.74, 71.34) --
-	( 90.86, 80.12) --
-	( 93.97, 80.67) --
-	( 97.08, 83.21) --
-	(100.19, 89.74) --
-	(103.31, 87.61) --
-	(106.42, 96.04) --
-	(109.53, 98.47) --
-	(112.64, 99.99) --
-	(115.75,103.72) --
-	(118.87,103.27) --
-	(121.98,109.92) --
-	(125.09,111.85) --
-	(128.20,115.67) --
-	(131.32,116.78) --
-	(134.43,119.28) --
-	(137.54,123.20) --
-	(140.65,125.87);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.66, 30.63) --
+	( 37.66, 30.63) --
+	( 40.67, 31.33) --
+	( 43.67, 31.33) --
+	( 46.68, 32.63) --
+	( 49.68, 33.82) --
+	( 52.69, 35.96) --
+	( 55.70, 37.83) --
+	( 58.70, 40.62) --
+	( 61.71, 43.28) --
+	( 64.71, 46.30) --
+	( 67.72, 50.22) --
+	( 70.73, 53.16) --
+	( 73.73, 57.14) --
+	( 76.74, 60.47) --
+	( 79.74, 64.05) --
+	( 82.75, 72.20) --
+	( 85.75, 71.34) --
+	( 88.76, 80.12) --
+	( 91.77, 80.67) --
+	( 94.77, 83.21) --
+	( 97.78, 89.74) --
+	(100.78, 87.61) --
+	(103.79, 96.04) --
+	(106.80, 98.47) --
+	(109.80, 99.99) --
+	(112.81,103.72) --
+	(115.81,103.27) --
+	(118.82,109.92) --
+	(121.82,111.85) --
+	(124.83,115.67) --
+	(127.84,116.78) --
+	(130.84,119.28) --
+	(133.85,123.20) --
+	(136.85,125.87);
 \definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.84, 34.38) --
-	( 37.95, 34.38) --
-	( 41.06, 34.93) --
-	( 44.17, 35.45) --
-	( 47.29, 34.93) --
-	( 50.40, 34.93) --
-	( 53.51, 34.93) --
-	( 56.62, 34.93) --
-	( 59.73, 34.93) --
-	( 62.85, 36.92) --
-	( 65.96, 35.45) --
-	( 69.07, 34.93) --
-	( 72.18, 35.96) --
-	( 75.30, 35.45) --
-	( 78.41, 35.45) --
-	( 81.52, 34.93) --
-	( 84.63, 34.93) --
-	( 87.74, 34.93) --
-	( 90.86, 35.45) --
-	( 93.97, 35.45) --
-	( 97.08, 34.93) --
-	(100.19, 34.93) --
-	(103.31, 35.45) --
-	(106.42, 34.93) --
-	(109.53, 36.92) --
-	(112.64, 34.93) --
-	(115.75, 35.45) --
-	(118.87, 35.45) --
-	(121.98, 34.93) --
-	(125.09, 34.93) --
-	(128.20, 34.93) --
-	(131.32, 34.93) --
-	(134.43, 34.93) --
-	(137.54, 35.45) --
-	(140.65, 34.93);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 34.38) --
+	( 37.66, 34.38) --
+	( 40.67, 34.93) --
+	( 43.67, 35.45) --
+	( 46.68, 34.93) --
+	( 49.68, 34.93) --
+	( 52.69, 34.93) --
+	( 55.70, 34.93) --
+	( 58.70, 34.93) --
+	( 61.71, 36.92) --
+	( 64.71, 35.45) --
+	( 67.72, 34.93) --
+	( 70.73, 35.96) --
+	( 73.73, 35.45) --
+	( 76.74, 35.45) --
+	( 79.74, 34.93) --
+	( 82.75, 34.93) --
+	( 85.75, 34.93) --
+	( 88.76, 35.45) --
+	( 91.77, 35.45) --
+	( 94.77, 34.93) --
+	( 97.78, 34.93) --
+	(100.78, 35.45) --
+	(103.79, 34.93) --
+	(106.80, 36.92) --
+	(109.80, 34.93) --
+	(112.81, 35.45) --
+	(115.81, 35.45) --
+	(118.82, 34.93) --
+	(121.82, 34.93) --
+	(124.83, 34.93) --
+	(127.84, 34.93) --
+	(130.84, 34.93) --
+	(133.85, 35.45) --
+	(136.85, 34.93);
 \definecolor{drawColor}{gray}{0.70}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 29.55, 29.90) -- ( 32.39, 29.90);
@@ -334,7 +334,7 @@
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 29.55,122.67) -- ( 38.08,122.67);
 
-\path[draw=drawColor,line width= 0.5pt,line join=round,line cap=round] ( 29.55, 25.11) rectangle (145.94,130.66);
+\path[draw=drawColor,line width= 0.5pt,line join=round,line cap=round] ( 29.55, 25.11) rectangle (141.96,130.66);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
@@ -363,35 +363,35 @@
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{gray}{0.70}
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] ( 31.72, 22.86) --
-	( 31.72, 25.11);
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 31.65, 22.86) --
+	( 31.65, 25.11);
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] ( 62.85, 22.86) --
-	( 62.85, 25.11);
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 61.71, 22.86) --
+	( 61.71, 25.11);
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] ( 93.97, 22.86) --
-	( 93.97, 25.11);
+\path[draw=drawColor,line width= 0.2pt,line join=round] ( 91.77, 22.86) --
+	( 91.77, 25.11);
 
-\path[draw=drawColor,line width= 0.2pt,line join=round] (125.09, 22.86) --
-	(125.09, 25.11);
+\path[draw=drawColor,line width= 0.2pt,line join=round] (121.82, 22.86) --
+	(121.82, 25.11);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 31.72, 16.10) {0};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 31.65, 16.10) {0};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 62.85, 16.10) {10};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 61.71, 16.10) {10};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 93.97, 16.10) {20};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 91.77, 16.10) {20};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at (125.09, 16.10) {30};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at (121.82, 16.10) {30};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.90] at ( 87.74,  6.25) {Domain size};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.90] at ( 85.75,  6.25) {Domain size};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
@@ -403,120 +403,120 @@
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (154.94, 96.84) rectangle (224.55,147.20);
+\path[fill=fillColor] (150.96, 67.93) rectangle (235.79,147.20);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (159.44,115.79) rectangle (173.90,130.25);
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
-\definecolor{drawColor}{RGB}{0,0,0}
-
-\path[draw=drawColor,line width= 0.6pt,line join=round] (160.89,123.02) -- (172.45,123.02);
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
-\definecolor{fillColor}{RGB}{255,255,255}
-
-\path[fill=fillColor] (159.44,101.34) rectangle (173.90,115.79);
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
-\definecolor{drawColor}{RGB}{0,0,0}
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (160.89,108.57) -- (172.45,108.57);
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
-\definecolor{drawColor}{RGB}{0,0,0}
-
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40,120.54) {functions};
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
-\definecolor{drawColor}{RGB}{0,0,0}
-
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40,106.09) {permutations};
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
-\definecolor{fillColor}{RGB}{255,255,255}
-
-\path[fill=fillColor] (154.94,  8.58) rectangle (235.79, 87.84);
-\end{scope}
-\begin{scope}
-\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
-\definecolor{fillColor}{RGB}{255,255,255}
-
-\path[fill=fillColor] (159.44, 56.44) rectangle (173.90, 70.89);
+\path[fill=fillColor] (155.46,115.79) rectangle (169.92,130.25);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (160.89, 63.66) -- (172.45, 63.66);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (156.91,123.02) -- (168.47,123.02);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (159.44, 41.98) rectangle (173.90, 56.44);
+\path[fill=fillColor] (155.46,101.34) rectangle (169.92,115.79);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{217,95,2}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (160.89, 49.21) -- (172.45, 49.21);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (156.91,108.57) -- (168.47,108.57);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (159.44, 27.53) rectangle (173.90, 41.98);
+\path[fill=fillColor] (155.46, 86.89) rectangle (169.92,101.34);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{117,112,179}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (160.89, 34.76) -- (172.45, 34.76);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (156.91, 94.11) -- (168.47, 94.11);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (159.44, 13.08) rectangle (173.90, 27.53);
+\path[fill=fillColor] (155.46, 72.43) rectangle (169.92, 86.89);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (160.89, 20.30) -- (172.45, 20.30);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (156.91, 79.66) -- (168.47, 79.66);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40, 61.18) {\textsc{Crane-BFS}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42,120.54) {\textsc{Crane2-BFS}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40, 46.73) {\textsc{Crane-Greedy}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42,106.09) {\textsc{Crane2-Greedy}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40, 32.28) {\textsc{FastWFOMC}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42, 91.63) {\textsc{FastWFOMC}};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (178.40, 17.82) {\textsc{ForcLift}};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42, 77.18) {\textsc{ForcLift}};
+\end{scope}
+\begin{scope}
+\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[fill=fillColor] (150.96,  8.58) rectangle (220.57, 58.93);
+\end{scope}
+\begin{scope}
+\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[fill=fillColor] (155.46, 27.53) rectangle (169.92, 41.98);
+\end{scope}
+\begin{scope}
+\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
+\definecolor{drawColor}{RGB}{0,0,0}
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (156.91, 34.76) -- (168.47, 34.76);
+\end{scope}
+\begin{scope}
+\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[fill=fillColor] (155.46, 13.08) rectangle (169.92, 27.53);
+\end{scope}
+\begin{scope}
+\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
+\definecolor{drawColor}{RGB}{0,0,0}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] (156.91, 20.30) -- (168.47, 20.30);
+\end{scope}
+\begin{scope}
+\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
+\definecolor{drawColor}{RGB}{0,0,0}
+
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42, 32.28) {functions};
+\end{scope}
+\begin{scope}
+\path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
+\definecolor{drawColor}{RGB}{0,0,0}
+
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42, 17.82) {permutations};
 \end{scope}
 \end{tikzpicture}
